<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dg_background"
    tools:context=".BookingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="500dp"
                android:id="@+id/booking_screen_empty_space"
                android:layout_alignParentStart="true"/>
            <com.hanks.htextview.evaporate.EvaporateTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/booking_screen_welcome"
                android:textAlignment="viewStart"
                android:layout_alignParentTop="true"
                android:layout_marginVertical="200dp"
                android:textColor="@color/colorWhite"
                android:layout_below="@id/booking_screen_end_time"
                android:textSize="48sp"
                android:layout_marginTop="100sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/booking_screen_empty_space_label"
                android:layout_below="@id/booking_screen_empty_space"
                android:layout_marginTop="50sp"
                android:textColor="@color/colorWhite"
                android:text="@string/booking_screen_hint_0"
                android:drawableRight="@mipmap/ic_arrow_down"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_below="@id/booking_screen_empty_space_label"
                android:layout_marginTop="25sp"
                android:textSize="25sp"
                android:id="@+id/booking_screen_first_name"
                android:inputType="text"
                android:padding="10dp"
                android:hint="@string/booking_screen_hint_1"
                android:textColorHint="@color/colorGreyLight"
                android:focusedByDefault="false"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25sp"
                android:textSize="25sp"
                android:id="@+id/booking_screen_last_name"
                android:inputType="text"
                android:padding="10dp"
                android:hint="@string/booking_screen_hint_2"
                android:textColorHint="@color/colorGreyLight"
                android:layout_below="@id/booking_screen_first_name"
                android:focusedByDefault="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/booking_screen_spinner_label"
                android:layout_below="@id/booking_screen_last_name"
                android:layout_marginTop="25sp"
                android:textColor="@color/colorWhite"
                android:text="@string/booking_screen_hint_3"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/booking_screen_spinner"
                android:layout_below="@id/booking_screen_spinner_label"
                android:layout_marginTop="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/booking_screen_date_label"
                android:layout_below="@id/booking_screen_spinner"
                android:layout_marginTop="25sp"
                android:textColor="@color/colorWhite"
                android:text="@string/booking_screen_hint_4"/>
            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/booking_screen_date_label"
                android:layout_marginTop="25sp"
                android:theme="@style/DatePickerTheme"
                android:id="@+id/booking_screen_date"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/booking_screen_start_time_label"
                android:layout_below="@id/booking_screen_date"
                android:layout_marginTop="25sp"
                android:textColor="@color/colorWhite"
                android:text="@string/booking_screen_hint_5"/>
            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/booking_screen_start_time_label"
                android:id="@+id/booking_screen_start_time"
                android:layout_marginTop="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/booking_screen_end_time_label"
                android:layout_below="@id/booking_screen_start_time"
                android:layout_marginTop="25sp"
                android:textColor="@color/colorWhite"
                android:text="@string/booking_screen_hint_6"/>
            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/booking_screen_end_time_label"
                android:id="@+id/booking_screen_end_time"
                android:layout_marginTop="25sp" />
            <com.hanks.htextview.evaporate.EvaporateTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/booking_screen_total_cost"
                android:textAlignment="viewStart"
                android:textColor="@color/colorWhite"
                android:layout_below="@id/booking_screen_end_time"
                android:textSize="25sp"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="100sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25sp"
                android:layout_alignParentBottom="true"
                android:weightSum="2"
                android:background="@color/colorGreyLight"
                android:paddingTop="1dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/buttonPrevious"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:drawableLeft="@android:drawable/ic_media_previous"
                    android:text="@string/booking_screen_previous"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/buttonConfirmBooking"
                    android:clickable="false"
                    android:background="@color/colorPrimary"
                    android:foreground="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:drawableRight="@android:drawable/ic_media_next"
                    android:text="@string/booking_screen_confirm"/>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>